<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find Me</string>
    <string name="app_name_caps">FIND ME</string>
    <string name="app_desc">Find Me reconnects you with your lost loved ones. We enable you to find your friends and family.</string>
    <string name="action_settings">Settings</string>
    <string name="get_started">TAP TO GET STARTED</string>
    <string name="image">Image</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="meetingPoints">MeetingPoints</string>
    <string name="meeting_point">Meeting point</string>
    <string name="search_person">Search for person</string>
    <string name="search_name_desc">Enter at least one name of the person you are looking for</string>
    <string name="meeting_times">Meeting times</string>
    <string name="search__origin">Search - Origin</string>
    <string name="search__name">Search - Name</string>
    <string name="search__phone">Search - Phone</string>
    <string name="results">Results</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="name2">Name:</string>
    <string name="origin">Origin</string>
    <string name="origin2">Origin:</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="continue_text">Continue</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="phone">Phone number</string>
    <string name="mobile">Mobile:</string>
    <string name="create_account">Create new account</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="share">Share</string>
    <string name="share_social">Share on social media</string>
    <string name="more">More</string>
    <string name="select">Select</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="place_of_origin">Place of origin</string>
    <string name="title_activity_account_new">AccountNew</string>
    <string name="hello_world">Hello world!</string>
    <string name="how_to_use">How to use Find Me</string>
    <string name="find_a_person">Find a person</string>
    <string name="recently_registered">Recently registered</string>
    <string name="image_desc">Image</string>
    <string name="register_instr">Register in a few easy steps</string>
    <string name="search_desc">What you would like to use to search?</string>
    <string name="phone_desc">Your phone number will make it easier for people to find you</string>
    <string name="phone_search_desc">Enter the phone number of the person you are looking for</string>
    <string name="name_desc">Using your real name makes it easier for other people to recognize you</string>
    <string name="origin_desc">Selecting a country first makes it easier to find a place</string>
    <string name="origin_search_desc">Enter the place of origin of the person you are looking for.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="father_name">Father\'s name</string>
    <string name="grandfather_name">Grandfather\'s name</string>
    <string name="other_name">Other name</string>
    <string name="take_picture">Take picture</string>
    <string name="take_photo">Take photo</string>
    <string name="how_help">You can either Find a person or Register yourself.
        Registering yourself helps other family members find you.
        To do so just tap on \'Register\' on the first screen and follow the simple steps and provide the required details about yourself.
        To Find a person hit the \'Find a person\' button on the start screen and search the person you would like by his/her name, phone number or origin.</string>
    <string name="select_place">Places (Use commas to separate places)</string>
    <string name="taken_photo">Taken photo</string>
    <string name="take_another">Take another</string>
    <string name="ok_photo">This is OK</string>
    <string name="register_summ_instr">Tap on a field to edit it</string>
    <string name="connect_error">Connection error</string>
    <string name="connection_error_message">A connection error has occurred.Retry?</string>
    <string name="registered_confirm">Confirm your details</string>
    <string name="registered_info">You are Registered!</string>
    <string name="camera_error">Camera error</string>
    <string name="camera_message">The camera could not be accessed.Try again?</string>
    <string name="skip">Skip</string>
    <string name="no_results">Could not find a person matching the details provided.Try again.</string>
    <string name="registered_thanks">Thank you for registering</string>
    
</resources>