<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:padding="16dp" >

        <ImageView
            android:id="@+id/imageView_register_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/ic_phone" />

        <TextView
            android:id="@+id/textView_phone_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_register_phone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/phone_desc"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edittext_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_phone_desc"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="60"
            android:hint="@string/phone"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/white_cursor"
            app:baseColor="@color/white"
            app:errorColor="@color/red_error"
            app:floatingLabel="highlight"
            app:primaryColorEdittext="@color/white" >
        </com.rengwuxian.materialedittext.MaterialEditText>

        <Button
            android:id="@+id/button_register_continue"
            style="@style/Buttonkakuma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_phone"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/border_button_transparent"
            android:padding="16dp"
            android:text="@string/continue_text"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_register_find_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_register_continue"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/find_a_person"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</ScrollView>