<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        android:padding="16dp" >

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/app_name_caps"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_desc"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/options_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_desc"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:weightSum="100" >

            <Button
                android:id="@+id/button_register"
                style="@style/Buttonkakuma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="8dp"
                android:layout_weight="50"
                android:alpha="1.0"
                android:background="@drawable/border_button_transparent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/register"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_find_a_person"
                style="@style/Buttonkakuma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="8dp"
                android:layout_weight="50"
                android:alpha="1.0"
                android:background="@drawable/border_button"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/find_a_person"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_how_to_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/options_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/how_to_use"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</ScrollView>