<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:padding="16dp" >

        <ImageView
            android:id="@+id/imageView_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/ic_newaccount" />

        <TextView
            android:id="@+id/textView_register_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/register_instr"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_register_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_register_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_register_continue"
            style="@style/Buttonkakuma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_register_policy"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/border_button_transparent"
            android:padding="16dp"
            android:text="@string/continue_text"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_register_find_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_register_continue"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/find_a_person"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</ScrollView>