<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp" >

            <ImageView
                android:id="@+id/imageView_register_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/ic_origin" />

            <TextView
                android:id="@+id/textView_origin_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView_register_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/origin_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_origin_countries"
                style="@style/Spinnerkakumapp_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_origin_desc"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="40" />

            <MultiAutoCompleteTextView
                android:id="@+id/autocomplete_origin_places"
                style="@style/AutoCompleteTextViewehealth_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner_origin_countries"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:cursorVisible="false"
                android:hint="@string/select_place"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textSize="16sp" />

            <com.pnikosis.materialishprogress.ProgressWheel
                android:id="@+id/progressBar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@+id/autocomplete_origin_places"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:visibility="visible"
                app:matProg_barColor="@color/white"
                app:matProg_progressIndeterminate="true" />

            <Button
                android:id="@+id/button_register_continue"
                style="@style/Buttonkakuma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/autocomplete_origin_places"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_button_transparent"
                android:padding="16dp"
                android:text="@string/continue_text"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView_register_find_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/find_a_person"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>