<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light" >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:padding="16dp" >

            <ImageView
                android:id="@+id/imageView_register_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/ic_search_name" />

            <TextView
                android:id="@+id/textView_name_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView_register_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/search_name_desc"
                android:textColor="@color/primary"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_name_desc"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:weightSum="100" >

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edittext_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="50"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:nextFocusDown="@+id/edittext_last_name"
                    android:nextFocusForward="@+id/edittext_last_name"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:textColor="@color/primary"
                    app:baseColor="@color/primary"
                    app:errorColor="@color/red_error"
                    app:floatingLabel="highlight"
                    app:primaryColorEdittext="@color/primary" >
                </com.rengwuxian.materialedittext.MaterialEditText>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edittext_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="50"
                    android:hint="@string/father_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:textColor="@color/primary"
                    app:baseColor="@color/primary"
                    app:errorColor="@color/red_error"
                    app:floatingLabel="highlight"
                    app:primaryColorEdittext="@color/primary" >
                </com.rengwuxian.materialedittext.MaterialEditText>
            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edittext_other_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_layout"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:hint="@string/grandfather_name"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="@color/primary"
                app:baseColor="@color/primary"
                app:errorColor="@color/red_error"
                app:floatingLabel="highlight"
                app:primaryColorEdittext="@color/primary" >
            </com.rengwuxian.materialedittext.MaterialEditText>

            <LinearLayout
                android:id="@+id/options_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edittext_other_name"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:weightSum="100" >

                <Button
                    android:id="@+id/button_back"
                    style="@style/Buttonkakuma"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginRight="20dp"
                    android:layout_weight="50"
                    android:alpha="1.0"
                    android:background="@drawable/border_button"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/back"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_continue"
                    style="@style/Buttonkakuma"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="50"
                    android:alpha="1.0"
                    android:background="@drawable/border_button_white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/continue_text"
                    android:textColor="@color/primary" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>