<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:padding="16dp" >

        <TextView
            android:id="@+id/textView_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/registered_info"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <com.kakumapp.views.CircularImageView
            android:id="@+id/image_view_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/textView_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:contentDescription="@string/image_desc"
            app:civ_shadow="true" >
        </com.kakumapp.views.CircularImageView>

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_view_photo"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:layout_weight="30"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_continue"
            style="@style/Buttonkakuma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_name"
            android:layout_centerHorizontal="true"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_button_transparent"
            android:text="@string/find_a_person"
            android:textColor="@color/white" />
    </RelativeLayout>

</ScrollView>